feat(campaign): implement saveCampaign to send token via PUT
- Replaces export modal with direct API call
- Generates Base64 token with campaign and hero data
- Gets campaign ID from URL and PUTs to `/campaigns/alter` with `campaigns_pk` and `tracker_hash`
- Removes modal-related methods and properties
- Handles errors safely and displays success/error alerts

--- a/src/locales/en_US/app.yaml
+++ b/src/locales/en_US/app.yaml
@@ -16,6 +16,7 @@ label:
   remove-campaign: Remove campaign
   new-campaign: New campaign
   export-campaign: Export campaign
+  save-campaign-put: Save campaign
   copy-to-clipboard: Copy to clipboard
   import-campaign: " Import campaign"
   sequential-adventure: Sequential Adventure
