feat(underkeep): adventure itens

--- a/src/locales/en_US/items.yaml
+++ b/src/locales/en_US/items.yaml
@@ -6,6 +6,19 @@ weapon:
     magicians-staff: Magician's Staff
     robins-crossbow: Robin's Crossbow
     dwarven-warhammer: Dwarven Warhammer
+    masterwork-sword: Masterwork Sword
+    lumberjacks-axe: Lumberjack's Axe
+    elanian-crossbow: Elanian Crossbow
+    elven-speellblade: ELven Spellblade
+    stone-gladius: Stone Gladius
+    lost-claymore: Lost Claymore  
+    lost-claymore-gem: Lost Claymore (Cosmic Gem)
+    draconian-scimitar: Draconian Scimitar
+    draconian-scimitar-gem: Draconian Scimitar (Cosmic Gem)
+    lorelanian-longbow: Lorelanian Longbow  
+    lorelanian-longbow-gem: Lorelanian Longbow (Cosmic Gem)
+    redwood-staff: Redwood Staff
+    redwood-staff-gem: Redwood Staff (Cosmic Gem)
   core:
     amiran-crossbow: Amiran Crossbow
     amiran-halberd: Amiran Halberd
@@ -106,6 +119,12 @@ weapon:
     ultimate-arcabalest: Ultimate Arcabalest
     war-bow: War Bow
 trinket:
+  underkeep: 
+    locket-of-safeguard: Locket Of Safeguard
+    silver-helmet: Silver Helmet
+    living-torch: Living Torch
+    gravity-boots: Gravity Boots
+    gravity-boots-gem: Gravity Boots (Cosmic Gem)
   core:
     amulet-of-power: Amulet Of Power
     amulet-of-rewinding: Amulet Of Rewinding
@@ -207,6 +226,13 @@ armor:
     elvensilk-robe: Elvensilk Robe
     hunters-cuirass: Hunter's Cuirass
     dwarven-plate: Dwarven Plate
+    mirror-plate: Mirror Plate
+    astralsilk-robe: Astralsilk Robe
+    astralsilk-robe-gem: Astralsilk Robe (Cosmic Gem)
+    dragonhide-cuirass: Dragonhide Cuirass
+    dragonhide-cuirass-gem: Dragonhide Cuirass (Cosmic Gem)
+    quicksilver-breastplate: Quicksilver Breastplate
+    quicksilver-breastplate-gem: Quicksilver Breastplate (Cosmic Gem)
   core:
     breastplate: Breastplate
     cloth-armor: Cloth Armor
@@ -273,6 +299,8 @@ armor:
     ultimate-exquisite-mail: Ultimate Exquisite Mail
     ultimate-quilted-doublet: Ultimate Quilted Doublet
 consumable:
+  underkeep:
+    cosmic-ruby: Cosmic Ruby
   core:
     cosmic-gemstone: Cosmic Gemstone
     cosmic-gemstone-chest: Cosmic Gemstone (Chest)
@@ -309,6 +337,12 @@ consumable:
     scroll-of-protection: Scroll of Protection
     treasure-trove: Treasure Trove (Hero)
 offhand:
+  underkeep:
+    ebony-chair: Ebony Chair
+    masterwork-sword: Masterwork Sword
+    earls-shield: Earl's Shield
+    arcane-bulwark: Arcane Bulwark
+    ritual-dagger: Ritual Dagger
   core:
     deadly-backstabber: Deadly Backstabber
     deft-stilleto: Deft Stilleto
