--- a/src/locales/en_US/items.yaml
+++ b/src/locales/en_US/items.yaml
@@ -301,6 +301,11 @@ armor:
 consumable:
   underkeep:
     cosmic-ruby: Cosmic Ruby
+    scroll-of-incinerate: Scroll of Incinerate
+    potion-of-rejuvenation: Potion of Rejuvenation
+    scroll-of-winter: Scroll of Winter
+    potion-of-strength: Potion of Strength
+    potion-of-concentration: Potion of Concentration
   core:
     cosmic-gemstone: Cosmic Gemstone
     cosmic-gemstone-chest: Cosmic Gemstone (Chest)
