feat(tracker): new tracker cards

--- a/src/locales/en_US/app.yaml
+++ b/src/locales/en_US/app.yaml
@@ -115,6 +115,7 @@ text:
   campaign-imported: Campaign imported
   campaign-removed: Campaign removed
 monster:
+  wermuggdir: Wermuggdir
   abomination: Abomination
   archon: Archon
   bane: Bane
