--- a/src/locales/en_US/app.yaml
+++ b/src/locales/en_US/app.yaml
@@ -18,8 +18,8 @@ label:
   save-campaign-put: Save campaign
   copy-to-clipboard: Copy to clipboard
   import-campaign: " Import campaign"
-  sequential-adventure: Sequential Adventure
-  camp-phase: Camp Phase
+  sequential-adventure: Start Playing
+  camp-phase: Stop Playing
   remove-hero: Remove hero
   add-hero: Add hero
   campaigns: Campaigns
