feat(campaign-view): show BaseAlert and refresh player list on removal
- Listen for `playersRemoved` event from `RemovePlayersButton`
- Implement `onPlayerRemoved` handler to call `setAlert` (showing the BaseAlert) and `fetchPlayers` on `CampaignPlayerList`
- Ensure player list is updated immediately after a removal

--- a/src/locales/en_US/app.yaml
+++ b/src/locales/en_US/app.yaml
@@ -113,6 +113,8 @@ text:
   no-resources: No resources
   campaign-imported: Campaign imported
   campaign-removed: Campaign removed
+  campaign-removed-player: Remove Player
+  share-campaign: Share Campaign
 monster:
   wermuggdir: Wermuggdir
   abomination: Abomination
