Change name share campaign button

--- a/src/locales/en_US/app.yaml
+++ b/src/locales/en_US/app.yaml
@@ -114,7 +114,7 @@ text:
   campaign-imported: Campaign imported
   campaign-removed: Campaign removed
   campaign-removed-player: Remove Player
-  share-campaign: Share Campaign
+  share-campaign: Invite Player
 monster:
   wermuggdir: Wermuggdir
   abomination: Abomination
